July 5 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Temporary states whose counters are zero are now considered permanent intrinsics
	* The character database value PermanentStates renamed as ClassStates
	* The character data member PermanentState renamed as EquipmentState,
	  and the associated function names updated as well
	* Added BeginStateHandlers and EndStateHandlers that are called always when states
	  (either temporary, intrinsic or controlled) are activated/deactivated
	* Removed the old handler system used only when switching a temporary state on/off
	* Simplified the inner structure of the code in such way that haste and slow can now be
	  in effect simultaneously, but this is represented in the panel as if neither was active
	* Added infravision and ESP states
	* See invisible state removed, as infravision now confers the same benefits
	* HasInfraVision character database value removed
	* Added wand of invisibility
	* Added ring of infravision
	* Added amulet of ESP
	* Draw system rewritten completely to make draw functions far more flexible and
	  easier to use and to remove some duplicate code
	* Added transparency effect for invisible creatures sensed by infravision or ESP
	* Added object::MaxAlpha() function to make the adding of transparency effects again a bit easier
	* Characters seen by infravision or ESP are no longer affected by varying luminance;
	  instead they are always seen as if the light level was 256
	* Corrected a recently-added bug which caused AlterLuminance not to update
	  MemorizedDescription correctly when the first emitter was added
	* Added item::IsVisible(), stack::GetVisibleItems() and stack::GetBottomVisibleItem()
	  functions which allow the convenient use of hidden items
	* Script generated land mines and bear traps are now correctly invisible
	* Hidden items are now shown if SeeWholeMapCheat is on
	* Added iosystem::ScrollBarQuestion which acts as a graphical version of the normal NumberQuestion