@@ -88,7 +88,7 @@
 #define SATIATED 3
 #define BLOATED 4
 
-#define STATES 9
+#define STATES 10
 
 #define POLYMORPHED 1
 #define HASTE 2
@@ -97,8 +97,10 @@
 #define LIFE_SAVED 16
 #define LYCANTHROPY 32
 #define INVISIBLE 64
+#define SEE_INVISIBLE 128
 #define INFRAVISION 128
 #define ESP 256
+#define POISONED 512
 
 #define TORSO 1
 #define HEAD 2
